# passkey-foundation

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json
.claude_workflow/: design.md  requirements.md  tasks.md
lambda/: Cargo.toml
lambda/src/: context.rs  errors.rs  integration_tests.rs  main.rs  schema.rs
shared/: Cargo.toml
shared/src/: config.rs  dynamodb.rs  email.rs  errors.rs  jwt.rs  lib.rs  otp.rs  types.rs  webauthn.rs
xtask/: Cargo.toml
xtask/src/: main.rs
