[workspace]
members = [
    "xtask",
    "shared",
    "lambda",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# AWS SDK
aws-sdk-dynamodb = "1.84.0"
aws-sdk-apigateway = "1.79.0"
aws-sdk-lambda = "1.88.0"
aws-sdk-iam = "1.81.0"
aws-config = "1.8.2"

# Lambda Runtime
lambda_runtime = "0.14.2"
lambda-web = "0.2.1"

# WebAuthn
webauthn-rs = "0.5.2"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

# Utilities
uuid = { version = "1.17.0", features = ["v4"] }
base64 = "0.22.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3", features = ["serde", "macros", "parsing", "formatting"] }

# Development tools
clap = { version = "4.5.41", features = ["derive"] }
scripty = "0.3.3"

# HTTP
http = "1.1"