[workspace]
members = [
    "xtask",
    "shared",
    "lambda",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# AWS SDK
aws-sdk-dynamodb = "1.84.0"
aws-sdk-apigateway = "1.79.0"
aws-sdk-lambda = "1.88.0"
aws-sdk-iam = "1.81.0"
aws-sdk-ses = "1.79.0"
aws-sdk-sts = "1.78.0"
aws-config = "1.8.2"

# Lambda Runtime
lambda_runtime = "0.14.2"

# GraphQL
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"

# Web Framework
axum = "0.8.4"

# WebAuthn
webauthn-rs = "0.5.2"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

# Authentication & Cryptography
jsonwebtoken = "9.3.1"
sha2 = "0.10.9"
rand = "0.9.1"

# Utilities
uuid = { version = "1.17.0", features = ["v4"] }
base64 = "0.22.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3.41", features = ["serde", "macros", "parsing", "formatting"] }
anyhow = "1.0.98"
url = "2.5.4"
urlencoding = "2.1.3"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Development tools
clap = { version = "4.5.41", features = ["derive"] }
scripty = "0.3.3"

# HTTP
http = "1.3.1"
