[package]
name = "lambda"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }

# AWS and Lambda
lambda_runtime = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }

# WebAuthn
webauthn-rs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }

# HTTP and error handling
anyhow = "1.0"
http = { workspace = true }