[package]
name = "lambda"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }

# AWS and Lambda
lambda_runtime = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-ses = { workspace = true }
aws-config = { workspace = true }

# GraphQL
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# Axum web framework
axum = { workspace = true }

# WebAuthn
webauthn-rs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication & Cryptography
jsonwebtoken = { workspace = true }

# Utilities
uuid = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
urlencoding = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP
http = { workspace = true }

[dev-dependencies]
futures = "0.3"
tracing-test = "0.2"