[package]
name = "shared"
version = "0.1.0"
edition.workspace = true

[dependencies]
# AWS SDK
aws-sdk-dynamodb = { workspace = true }
aws-config = "1.8.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }

# Error handling
anyhow = "1.0"

# WebAuthn (for types)
webauthn-rs = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Time handling
time = { workspace = true }