[package]
name = "shared"
version = "0.1.0"
edition.workspace = true

[dependencies]
# AWS SDK
aws-sdk-dynamodb = { workspace = true }
aws-sdk-ses = { workspace = true }
aws-config = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication & Cryptography
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }

# WebAuthn (for types)
webauthn-rs = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Time handling
time = { workspace = true }

# Logging
tracing = { workspace = true }