[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# Shared library
shared = { path = "../shared" }

# CLI
clap = { workspace = true }

# External command execution
scripty = { workspace = true }

# AWS SDK
aws-sdk-dynamodb = { workspace = true }
aws-sdk-apigateway = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-sdk-iam = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-config = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Additional dependencies for xtask
colored = "3.0.0"